--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.webp" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css" rel="stylesheet" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/flowbite@3.1.2/dist/flowbite.min.css"
+      rel="stylesheet"
+    />
 
-    <title>VVTraffic Data - Evite pagar a mais e descubra qual o preço justo, de acordo com as características da sua empresa.</title>
+    <title>
+      VVTraffic Data - Evite pagar a mais e descubra qual o preço justo, de
+      acordo com as características da sua empresa.
+    </title>
   </head>
   <body>
     <div id="root"></div>
