--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
     />
 
     <title>
-      VVTraffic Data - Evite pagar a mais e descubra qual o preço justo, de
-      acordo com as características da sua empresa.
+      VVTraffic Data - Calculadora de Investimento em Marketing Digital | Descubra o Preço Justo
     </title>
+    <meta name="description" content="Descubra o investimento ideal em marketing digital para sua empresa. Calculadora gratuita baseada no seu setor e faturamento. Evite pagar a mais!" />
+    <meta name="keywords" content="marketing digital, investimento, calculadora, preço justo, leads, ROI" />
   </head>
   <body>
     <div id="root"></div>
